# verify_charuco

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/verify_aruco/: verify_aruco_node.h
launch/: basic.launch  compare_charuco_verify_charuco.launch
params/: body_to_camera.yaml
rviz/: aruco_verify.rviz
src/: verify_aruco_node.cpp  verify_aruco_tf.cpp
